Deduplication by notes

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -3369,7 +3369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3568,7 +3568,7 @@
     "\n",
     "notes_list = grenade_notes.to_list()\n",
     "\n",
-    "print(\"\\n\\n\".join(notes_list))"
+    "# print(\"\\n\\n\".join(notes_list))"
    ]
   },
   {
