done 4 clustering process

--- a/00_sub_events_extraction_exported.ipynb
+++ b/00_sub_events_extraction_exported.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "added 2 columns: {'actor2_ntnlty', 'actor1_ntnlty'}\n"
+      "added 2 columns: {'actor1_ntnlty', 'actor2_ntnlty'}\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "80       UKRAINE                            Civilians (Russia)        RUSSIA  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "added 14 columns: {'artillery_supported', 'drone_losses', 'armored_vehicle_losses', 'air_units_supported', 'cannon_losses', 'mortar_losses', 'car_losses', 'uav_losses', 'boat_losses', 'vehicle_losses', 'is_shelling', 'air_forces_supported', 'is_supported', 'aviation_supported'}\n"
+      "added 14 columns: {'armored_vehicle_losses', 'mortar_losses', 'boat_losses', 'air_forces_supported', 'car_losses', 'vehicle_losses', 'air_units_supported', 'artillery_supported', 'drone_losses', 'is_supported', 'aviation_supported', 'cannon_losses', 'is_shelling', 'uav_losses'}\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,12 +740,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# air_df.head(50)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Government Regains Territory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regain_df = ukraine_war_events[ukraine_war_events['sub_event_type'] == 'Government regains territory']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49467\n",
+      "102879\n",
+      "9187\n",
+      "25235\n",
+      "350\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(armed_clash_df))\n",
+    "print(len(attack_df))\n",
+    "print(len(disrupt_df))\n",
+    "print(len(air_df))\n",
+    "print(len(regain_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save\n",
+    "\n",
+    "armed_clash_df.to_csv('./feature_table_by_catg/armed_clash_df.csv')\n",
+    "attack_df.to_csv('./feature_table_by_catg/attack_df.csv')\n",
+    "disrupt_df.to_csv('./feature_table_by_catg/disrupt_df.csv')\n",
+    "air_df.to_csv('./feature_table_by_catg/air_df.csv')\n",
+    "regain_df.to_csv('./feature_table_by_catg/regain_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "armed_cols = set(armed_clash_df.columns)\n",
+    "attack_cols = set(attack_df.columns)\n",
+    "disrupt_cols = set(disrupt_df.columns)\n",
+    "air_cols = set(air_df.columns)\n",
+    "regain_cols = set(regain_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "{'admin3', 'country', 'inter2', 'actor1_ntnlty', 'geo_precision', 'event_type', 'latitude', 'interaction', 'notes', 'time_precision', 'inter1', 'source', 'iso', 'assoc_actor_2', 'admin2', 'tags', 'civilian_targeting', 'assoc_actor_1', 'fatalities', 'region', 'source_scale', 'event_date', 'disorder_type', 'location', 'actor2_ntnlty', 'sub_event_type', 'actor1', 'year', 'longitude', 'event_id_cnty', 'actor2', 'admin1', 'timestamp'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mutual_cols = armed_cols.intersection(attack_cols).intersection(disrupt_cols).intersection(air_cols).intersection(regain_cols)\n",
+    "print(len(mutual_cols))\n",
+    "print(mutual_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "23\n",
+      "45\n",
+      "8\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new columns amt\n",
+    "print(len(armed_cols-mutual_cols))\n",
+    "print(len(attack_cols-mutual_cols))\n",
+    "print(len(disrupt_cols-mutual_cols))\n",
+    "print(len(air_cols-mutual_cols))\n",
+    "print(len(regain_cols-mutual_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -771,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
